@@ -25,6 +25,7 @@
     <ProjectReference type="Assembly" localcopy="True" refto="../../lib/log4net.dll" />
     <ProjectReference type="Project" localcopy="True" refto="Common" />
     <ProjectReference type="Gac" localcopy="True" refto="System.Runtime.Remoting, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
+    <ProjectReference type="Project" localcopy="True" refto="Frontend" />
   </References>
   <Deployment.LinuxDeployData scriptName="smuxi-frontend-test" />
   <DeploymentInformation strategy="File">
